Fix Background break at very large screens

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 main {
     width: 100vw;
     min-height: 100vh;
-    background: url("images/pattern-background-desktop.svg") no-repeat;
+    background: url("images/pattern-background-desktop.svg") repeat-x;
     background-color: var(--pale-blue);
     display: flex;
     justify-content: center;
